--- a/education.html
+++ b/education.html
@@ -22,7 +22,7 @@
     <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/education.html">
 
     <meta name="application-name" content="Krushna | Education" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | Education" />
+    <meta name="apple-mobile-web-app-title" content="Krushna chandra| Education" />
     <meta name="summary" content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
 
